added basic cruds for products
